# handles

./: README.md  github.py  main.py  pyproject.toml  requirements-dev.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/handles/: cli.py  main.py  mapping.py  platform.py
